<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transactionDetail.TransactionDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@color/primary_dark"
        android:clipToPadding="false"
        android:paddingVertical="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clipToPadding="false"
            android:elevation="20dp">

            <ImageButton
                android:id="@+id/image_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_cancel"
                app:layout_constraintBottom_toBottomOf="@id/text_view_title_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_view_title_detail"
                app:tint="@color/primary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/transaction_list_text_title_detail"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_receipt_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_title_detail"
                tools:text="número recibo: b83d90f3-84e6-4707-9c6e-d3284af8c70e" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_transaction_identifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_receipt_number"
                tools:text="id transacción: a9fc8d79-9bf3-4c3c-9536-414524e63ea0" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_status_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_transaction_identifier"
                tools:text="codig stado: 00" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_status_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/transaction_list_text_description"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_status_code" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_status_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="textStart"
                android:textColor="@color/primary_yellow"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_status_description_text"
                app:layout_constraintStart_toEndOf="@+id/text_view_status_description_text"
                app:layout_constraintTop_toTopOf="@+id/text_view_status_description_text"
                tools:text=" Aprobada" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_void_transaction"
                style="@style/ButtonCancel"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/transaction_authorization_text_button_text_cancel_transaction"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_status_description_text" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>